objects/Dealer_Group_Profile__c.object
<CustomObject>
    <description>Object used to store key dealer group decision making information.  This object was created initially for the Digital Marketing Services group.</description>
    <fields>
        <fullName>DS_GAM_CAM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the contact at the corporation that the GAM or CAM interacts with.</inlineHelpText>
        <label>DS GAM/Marketing Strategist Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealer Group Profiles</relationshipLabel>
        <relationshipName>Dealer_Group_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Name__c</fullName>
        <formula>Dealer_Group__r.Dealer_Group_Name2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Group Profiles</relationshipLabel>
        <relationshipName>Dealer_Group_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Model3rdParty__c</fullName>
        <description>Decision Making indicator for inclusion of 3rd Party Vendors.</description>
        <inlineHelpText>If all decisions are made at Corporate, the model is Centralized.  If some decisions are made at the rooftop location, then the model is Hybrid.  If almost all decisions are made at the rooftop level, the model is Independent.</inlineHelpText>
        <label>Decision Making Model</label>
        <picklist>
            <picklistValues>
                <fullName>Centralized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Making_ModelGH__c</fullName>
        <description>Decision Making indicator for the overall Group Hierarchy section.</description>
        <inlineHelpText>If all decisions are made at Corporate, the model is Centralized.  If some decisions are made at the rooftop location, then the model is Hybrid.  If almost all decisions are made at the rooftop level, the model is Independent.</inlineHelpText>
        <label>Decision Making Model</label>
        <picklist>
            <picklistValues>
                <fullName>Centralized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Making_ModelInv__c</fullName>
        <description>Decision Making indicator for Inventory.</description>
        <inlineHelpText>If all decisions are made at Corporate, the model is Centralized.  If some decisions are made at the rooftop location, then the model is Hybrid.  If almost all decisions are made at the rooftop level, the model is Independent.</inlineHelpText>
        <label>Decision Making Model</label>
        <picklist>
            <picklistValues>
                <fullName>Centralized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Making_ModelLP__c</fullName>
        <description>Decision Making indicator for the Lead Pathing section.</description>
        <inlineHelpText>If all decisions are made at Corporate, the model is Centralized.  If some decisions are made at the rooftop location, then the model is Hybrid.  If almost all decisions are made at the rooftop level, the model is Independent.</inlineHelpText>
        <label>Decision Making Model</label>
        <picklist>
            <picklistValues>
                <fullName>Centralized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Making_ModelSB__c</fullName>
        <description>Decision Making indicator for the Style and Branding section.</description>
        <inlineHelpText>If all decisions are made at Corporate, the model is Centralized.  If some decisions are made at the rooftop location, then the model is Hybrid.  If almost all decisions are made at the rooftop level, the model is Independent.</inlineHelpText>
        <label>Decision Making Model</label>
        <picklist>
            <picklistValues>
                <fullName>Centralized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Marking_ModelSEO__c</fullName>
        <description>Decision Making indicator for SEO.</description>
        <inlineHelpText>If all decisions are made at Corporate, the model is Centralized. If some decisions are made at the rooftop location, then the model is Hybrid. If almost all decisions are made at the rooftop level, the model is Independent.</inlineHelpText>
        <label>Decision Making Model</label>
        <picklist>
            <picklistValues>
                <fullName>Centralized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Information_Folder__c</fullName>
        <label>Group Information Folder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Opt_Out_of_Surveys__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the corporate contacts do not want a CSI.  This will not apply to contacts listed at the individual dealerships (even if it&apos;s really a corporate contact) unless they respond to a survey and opt out.</inlineHelpText>
        <label>Group Opt-Out of Surveys?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the contact at the corporation who makes decisions around Inventory.</inlineHelpText>
        <label>Inventory Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealer Group Profiles (Inventory Contact)</relationshipLabel>
        <relationshipName>Dealer_Group_Profiles4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Pathing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the contact at the corporation who makes decisions around lead pathing.</inlineHelpText>
        <label>Lead Pathing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealer Group Profiles (Lead Pathing Contact)</relationshipLabel>
        <relationshipName>Dealer_Group_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Branding_Guidelines__c</fullName>
        <label>Link to Branding Guidelines</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Style_Guide__c</fullName>
        <label>Link to Style Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marketing_Email_Signature__c</fullName>
        <inlineHelpText>Your choice will indicate who is in the &quot;From&quot; line in Marketing communications to the dealerships within this dealer group.</inlineHelpText>
        <label>Marketing Email Signature</label>
        <picklist>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multiple_Vendors__c</fullName>
        <label>Multiple Vendors</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes3rdParty__c</fullName>
        <description>This is the notes field for the 3rd Party Vendor section.</description>
        <inlineHelpText>If there are dealership exceptions to the corporate rule, please enter them here.  Ex.  Dealer A can make their own 3rd Party decisions, but all others cannot.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotesGen__c</fullName>
        <description>This is the notes field for the General section.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NotesInv__c</fullName>
        <description>This is the notes field for the Inventory section.</description>
        <inlineHelpText>If there are dealership exceptions to the corporate rule, please enter them here.  Ex.  Dealer A can make their own 3rd Party decisions, but all others cannot.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotesLP__c</fullName>
        <description>This is the notes field for the Lead Pathing section.</description>
        <inlineHelpText>If there are dealership exceptions to the corporate rule or multiple vendors, please enter them here.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotesSB__c</fullName>
        <description>This is the notes field for the Style &amp; Branding section.</description>
        <inlineHelpText>If there are dealership exceptions to the corporate rule, please enter them here.  Ex.  Dealer A can make their own branding decisions, but all others cannot.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotesSEO__c</fullName>
        <description>This is the notes field for the SEO section.</description>
        <inlineHelpText>If there are dealership exceptions to the corporate rule, please enter them here.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Child_Accounts__c</fullName>
        <description>This should be populated by a trigger or similar functionality and should only calculate how many Site Type Auto accounts or (Status = Active and Cobalt Account Number is not null) accounts exist within the dealer group.</description>
        <inlineHelpText>This is automatically calculated.</inlineHelpText>
        <label>Number of Child Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_WebIDs__c</fullName>
        <description>This field should be populated by a trigger or similar functionality, and should calculate how many Active WebIDs exist on child accounts associated with the given group.</description>
        <inlineHelpText>This is automatically calculated.</inlineHelpText>
        <label>Number of WebIDs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_CRM__c</fullName>
        <inlineHelpText>This is the CRM that is used at the majority of the group&apos;s dealerships.  Additional vendors go in notes.</inlineHelpText>
        <label>Primary CRM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Vendor__c</fullName>
        <inlineHelpText>This is the vendor that is used at the majority of the group&apos;s dealerships.  Additional vendors go in notes.</inlineHelpText>
        <label>Primary Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SEO_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the contact at the corporation who makes decisions around SEO.</inlineHelpText>
        <label>SEO Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealer Group Profiles (SEO Contact)</relationshipLabel>
        <relationshipName>Dealer_Group_Profiles5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shared_MLM_Asset_Library__c</fullName>
        <label>Shared MLM Asset Library</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Config_NotesSEO__c</fullName>
        <inlineHelpText>Only use this field if the dealer group has a username and password that applies across  multiple stores. If the password applies to under 5 stores, fill out a site config at the webid level. This field has restricted visibility.</inlineHelpText>
        <label>Site Config Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Style_Branding_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the contact at the corporation who makes decisions around style and branding.</inlineHelpText>
        <label>Style/Branding Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealer Group Profiles (Style/Branding Contact)</relationshipLabel>
        <relationshipName>Dealer_Group_Profiles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the contact at the corporation who makes decisions around 3rd Party Vendors.</inlineHelpText>
        <label>3rd Party Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealer Group Profiles (3rd Party Vendor Contact)</relationshipLabel>
        <relationshipName>Dealer_Group_Profiles3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Dealer Group Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DGP-{00000}</displayFormat>
        <label>Dealer Group Profile Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Group Profiles</pluralLabel>
    <recordTypes>
        <fullName>Digital_Services_Dealer_Group_Profile</fullName>
        <active>true</active>
        <description>This is the profile to apply to Cobalt type profiles and the System Admin profile in order to test.</description>
        <label>Digital Services Dealer Group Profile</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>